feat(template): replace examples with crud template
